# GridWatch

./: .env.example  .gitignore  Dockerfile  README.md  backtest_results.txt  configure.sh  correlation_results.txt  docker-compose.yml  list_coll.py  pyproject.toml  requirements.txt  seed_demo.py  setup.sh  test_rag.py
data/: 311_current.json  collisions.json  flood_events.json  housing_violations.json  potholes.json  rodent_inspections.json
skills/gridwatch-dispatch-triage/: SKILL.md
skills/gridwatch-flood-monitor/: SKILL.md
skills/gridwatch-risk-assessment/: SKILL.md
skills/nyc-dispatch/: SKILL.md
src/hackathon_nyc/: __init__.py  backtest_predictions.py  correlation_analysis.py  db.py  discord_bot.py  ingest.py  monitor_agent.py  openclaw_alerts.py  register.py  server.py  twilio_voice.py  voice_agent.py
src/hackathon_nyc/configs/: config_311.yml  config_floodwatch.yml  config_orchestrator.yml  config_serve.yml  config_unified.yml
src/hackathon_nyc/frontend/: index.html
src/hackathon_nyc/tools/: floodnet.py  geocoding.py  historical_lookup.py  nyc_opendata.py
